--- a/css/vault.css
+++ b/css/vault.css
@@ -17,6 +17,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 25px;
+    position: relative;
+    z-index: 101;
 }
 
 .input-with-icon {
@@ -63,7 +65,7 @@
 .profile-dropdown {
     position: absolute;
     top: 100%; /* Position below the button */
-    right: 0; /* Align to the right of the button */
+    right: 0; /* Align to a right of the button */
     min-width: 200px;
     z-index: 100;
     opacity: 0;
